--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "cookie-universal-nuxt": "^2.0.16",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "jquery": "^3.5.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "nuxt": "^2.4.0",
+    "vue-google-charts": "^0.3.2",
+    "vue-lodash": "^2.1.2",
+    "vue-morris": "^1.1.0",
     "vue-notification": "^1.3.16",
     "vuetify": "^1.5.5",
     "vuetify-loader": "^1.2.1"
